--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# IDE files
+.idea/.gitignore
+.idea/inspectionProfiles/
+.idea/lol_id_tools.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
