Adding requests and joblib as requirements.

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 
 [packages]
 fuzzywuzzy = {extras = ["speedup"],version = "*"}
+joblib = "*"
+requests = "*"
 
 [requires]
 python_version = "3.8"
