Moved all tests to use pytest and a small bugfix. Last version before a move to aiohttp, sqlite, and sqlalchemy.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 rapidfuzz = "*"
 joblib = "*"
 requests = "*"
+aiohttp = {extras = ["speedups"],version = "*"}
+pytest = "*"
 
 [requires]
 python_version = "3.8"
