Full rework of the module, getting ready to release v1.0.0.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
 aiodns==2.0.0
 aiohttp==3.6.2
+arrow==0.15.6
 async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==19.3.0
 brotlipy==0.7.0
+cassiopeia==4.0.12
 cchardet==2.1.6
+certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
 colorama==0.4.3
+datapipelines==1.0.7
+decorator==4.4.2
 idna==2.9
-more-itertools==8.2.0
+merakicommons==1.0.9
+more-itertools==8.3.0
 multidict==4.7.6
+networkx==2.4
 packaging==20.3
+Pillow==7.1.2
 pluggy==0.13.1
 py==1.8.1
 pycares==3.1.1
 pycparser==2.20
 pyparsing==2.4.7
 pytest==5.4.2
-rapidfuzz==0.7.12
+python-dateutil==2.8.1
+python-Levenshtein==0.12.0
+rapidfuzz==0.8.0
+requests==2.23.0
 six==1.14.0
-SQLAlchemy==1.3.17
+urllib3==1.25.9
 wcwidth==0.1.9
 yarl==1.4.2
