--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 pytest = "*"
 
 [packages]
-aiohttp = {extras = ["speedups"],version = "*"}
 rapidfuzz = "*"
+requests = "*"
 
 [requires]
 python_version = "3.8"
