--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+# TODO Move that to venv, drop pipenv
+tox = "*"
 pytest = "*"
 cassiopeia = "*"
 
