--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lol_id_tools"
-version = "1.8.0"
+version = "2.0.0"
 description = ""
 authors = ["mrtolkien <gary.mialaret@gmail.com>"]
 license = "MIT"
@@ -11,9 +11,11 @@ include = ["*.json"]
 python = "^3.8"
 requests = "^2.27.1"
 rapidfuzz = "^2.0.2"
+pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
+black = {version = "^22.3.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
